# voxel_renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: compute_shader.glsl  default.comp  fragment_shader.glsl  vertex_shader.glsl
ext/: CMakeLists.txt
scripts/: build.sh  setup.sh
src/: base.h  camera.c  camera.h  main.c  shader.c  shader.h
src/base/: logger.c  logger.h
